--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@
   padding-bottom: 3rem;
 }
 
+.px-1 {
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+}
+
 .p-1 {
   padding: 1.2rem;
 }
@@ -74,6 +79,38 @@ a {
   align-items: center;
   justify-content: space-between;
   background-color: blue;
+}
+
+.search-form {
+  position: relative;
+}
+
+.search-form input[type="text"] {
+  font-size: 1.2rem;
+  width: 100%;
+  height: 3.125rem;
+  border-radius: 3rem;
+  outline: none;
+  padding-left: 1.5rem;
+  padding-right: 5.5rem;
+  border: 1px solid #ccc;
+}
+
+.btn {
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.btn-search {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 3.125rem;
+  width: 5rem;
+  background-color: blue;
+  color: wheat;
+  font-size: 1rem;
 }
 
 @media screen and (min-width: 1000px) {
