--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,32 @@ a {
   background-color: blue;
 }
 
+.primary-nav > ul > li.nav-dropdown {
+  position: relative;
+}
+
+.primary-nav > ul .nav-dropdown ul {
+  display: none;
+}
+
+.primary-nav > ul .dropdown a:focus {
+  color: wheat;
+}
+
+.primary-nav > ul .nav-dropdown a:focus ~ ul {
+  display: block;
+  position: absolute;
+  background-color: white;
+  padding: 1rem;
+  z-index: 1;
+  left: 0;
+  min-width: 150px;
+}
+
+.primary-nav > ul .nav-dropdown a:focus ~ ul li + li {
+  margin-top: 0.7rem;
+}
+
 .search-form {
   position: relative;
 }
