--- a/src/App.css
+++ b/src/App.css
@@ -87,30 +87,39 @@ a {
   background-color: blue;
 }
 
-.primary-nav > ul > li.nav-dropdown {
+.primary-nav li:hover {
+  cursor: pointer;
+}
+
+.primary-nav li a:hover {
+  color: red;
+}
+
+.primary-nav ul li {
+  display: block;
   position: relative;
 }
 
-.primary-nav > ul .nav-dropdown ul {
+.nav-dropdown {
+  position: absolute;
+  background-color: #fff;
+  z-index: 1;
+  left: 0;
+  min-width: 12.5rem;
+  padding: 0.5rem 0;
   display: none;
 }
 
-.primary-nav > ul .dropdown a:focus {
-  color: wheat;
+.nav-dropdown li + li {
+  margin-top: 0.5rem;
 }
 
-.primary-nav > ul .nav-dropdown a:focus ~ ul {
+.primary-nav li:hover .nav-dropdown,
+.primary-nav li:focus-within > .nav-dropdown,
+.primary-nav li ul:hover {
+  opacity: 1;
+  visibility: visible;
   display: block;
-  position: absolute;
-  background-color: white;
-  padding: 1rem;
-  z-index: 1;
-  left: 0;
-  min-width: 150px;
-}
-
-.primary-nav > ul .nav-dropdown a:focus ~ ul li + li {
-  margin-top: 0.7rem;
 }
 
 .search-form {
