--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,16 @@ a {
   margin-left: 2rem;
 }
 
+.actors-container {
+  position: relative;
+}
+
+.actors-container label {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .actors {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
