--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,10 @@
   outline: none;
 }
 
+.btn-transparent {
+  background-color: transparent;
+}
+
 ul {
   list-style: none;
 }
@@ -216,6 +220,28 @@ a {
   grid-auto-rows: max-content;
   column-gap: 2rem;
   row-gap: 2rem;
+}
+
+.pagination-nav ul {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination-nav ul li {
+  border: 1px solid black;
+}
+
+.pagination-nav ul li + li {
+  /* border-left: 1px solid black; */
+  margin-left: 0.7rem;
+}
+
+.btn-link {
+  padding: 0.5rem;
+}
+
+.pagination-nav ul li.active {
+  background-color: aquamarine;
 }
 
 @media screen and (min-width: 1000px) {
