--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@ body {
   min-height: 100vh;
 }
 
+.main-body {
+  min-height: 100vh;
+  position: relative;
+}
+
 .logo {
   font-family: "Ranchers", cursive;
   letter-spacing: 2px;
@@ -127,6 +132,25 @@ h4 {
   background-color: transparent;
 }
 
+.heading-w-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heading-w-link span {
+  margin-right: 1.5rem;
+}
+
+.heading-w-link span a {
+  color: var(--dark-color);
+  font-size: 1.1rem;
+}
+
+.heading-w-link span a:hover {
+  color: var(--dark-blue-color);
+}
+
 ul {
   list-style: none;
 }
@@ -217,7 +241,7 @@ a {
   padding: 0.5rem 0 0.5rem 1.2rem;
 }
 
-.side-nav .no-link:hover span {
+.side-nav .no-link:hover > span {
   background-color: var(--light-blue-color);
 }
 
@@ -252,7 +276,6 @@ a {
 
 .primary-nav li a:hover,
 .side-nav li a:hover {
-  /* color: red; */
   color: #f64c72;
 }
 
@@ -551,6 +574,30 @@ a {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+footer {
+  background-color: var(--dark-blue-color);
+  color: var(--white-color);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  bottom: -80px;
+  width: 100%;
+  text-align: center;
+  min-height: 2rem;
+}
+
+footer a {
+  color: var(--white-color);
+  text-decoration: underline;
+}
+
+footer a:hover {
+  color: var(--lighter-blue-color);
+}
+
 @media screen and (min-width: 400px) {
   .movies {
     grid-template-columns: repeat(2, 1fr);
@@ -601,6 +648,7 @@ a {
     z-index: 1;
     left: 0;
     min-width: 12.5rem;
+    border-radius: 0.5rem;
     padding: 0.5rem 0;
     display: none;
   }
@@ -609,8 +657,12 @@ a {
     margin: 0;
   }
 
-  .primary-nav .nav-dropdown li + li {
-    margin-top: 0.5rem;
+  .primary-nav .nav-dropdown li {
+    padding: 0.2rem 0.5rem;
+  }
+
+  .primary-nav .nav-dropdown li:hover {
+    background-color: var(--lighter-blue-color);
   }
 
   .primary-nav li:hover .nav-dropdown,
