--- a/src/App.css
+++ b/src/App.css
@@ -358,6 +358,7 @@ a {
 
 .movie-card img {
   width: 100%;
+  min-height: 345px;
   border-radius: 0.5rem 0.5rem 0 0;
 }
 
@@ -482,6 +483,7 @@ a {
 
 .actor-card img {
   width: 100%;
+  min-height: 225px;
   border-radius: 0.5rem 0.5rem 0 0;
 }
 
